# edgestack-research

./: .gitignore  CLAUDE.md  README.md  REFERENCES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
configs/: full-literature-v2.yaml  full-stooq-action-stratified.yaml  full-stooq-bulk.yaml  full-stooq-literature-v2.yaml  full.yaml  high52-study-v1.yaml  loss-aware-v2.yaml  lowvol-study-v1.yaml  momentum-xs-study-v1.yaml  oil-paper-v1.yaml  overnight-edge-v1.yaml  pairs-study-v1.yaml  pead-study-v1.yaml  pead-study-v2.yaml  preholiday-study-v1.yaml  reversal-edge-v1.yaml  reversal-study.yaml  seasonal-intl-v1.yaml  seasonal-study-v1.yaml  smoke.yaml  spy-tom-edge-v1.yaml  tom-intl-v1.yaml  trend-study-v1.yaml  vix-study-v1.yaml  volshock-study-v1.yaml
docs/: android.md  architecture.md  free-data-feeds.md  live-alerts.md  methodology.md  overnight-research.md  report-interpretation.md  reversal-research.md  study-round-2026-07-19.md  study-round-2026-07-19b-menu.md  study-round-2026-07-19c-intl.md
edgestack/: __init__.py  advisor.py  agenttools.py  cli.py  config.py  disclaimer.py  logging.py  models.py  provenance.py
edgestack/oil/: data.py  (+8 more)
scripts/: install-autostart.ps1  post-close-job.ps1  pre-close-check.ps1  serve-mobile.ps1
tests/: test_advisor.py  test_agenttools.py  test_backtest.py  test_campaign_data_hardening.py  test_campaign_diagnostics.py  test_campaign_research.py  test_causality.py  test_cli.py  test_daily_job.py  test_data_cache.py  test_data_calendars_quality.py  test_data_factors.py  test_data_sources.py  test_data_universe.py  test_entry_signals.py  test_evaluation_report.py  test_features.py  test_global_holdout.py  test_holdout_governance.py  test_hypotheses.py  test_intl_round.py  test_live_state.py  test_loss_aware_v2.py  test_mobile_api.py  test_models_config.py  test_new_studies.py  test_oil_system.py  test_pead_edgar.py  test_report_rankings.py  test_reversal_edge.py  test_reversal_research.py  test_round_b_studies.py  test_scoring_entrytiming.py  test_stats.py  test_storage_pipeline.py  test_trend_vix_studies.py  test_turn_of_month_edge.py  test_validation.py
(+138 files in other folders)
