[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "edgestack"
version = "0.1.0"
description = "Research-grade statistical-edge discovery and paper-assistant engine"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Research and educational use only"}
authors = [{name = "EdgeStack contributors"}]
dependencies = [
  "aiolimiter>=1.2,<2",
  "arch>=7.2,<9",
  "duckdb>=1.1,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "matplotlib>=3.9,<4",
  "numba>=0.60,<1",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pandas-datareader>=0.10,<1",
  "pandas-market-calendars==5.4.0",
  "platformdirs>=4.3,<5",
  "pyarrow>=17,<22",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "pyyaml>=6.0,<7",
  "rich>=13.9,<15",
  "scikit-learn>=1.5,<2",
  "scipy>=1.14,<2",
  "statsmodels>=0.14,<1",
  "structlog>=24.4,<26",
  "tenacity>=9,<10",
  "typer>=0.12,<1",
  "uvicorn>=0.35,<1",
  "yfinance>=0.2.50,<1",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
confirm = ["zipline-reloaded==3.1.1"]
live = ["apscheduler>=3.11,<4", "plyer>=2.1,<3"]
ml = ["xgboost>=3,<4"]
dev = [
  "black>=24.10,<26",
  "hypothesis>=6.115,<7",
  "mypy>=1.13,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<8",
  "respx>=0.22,<1",
  "ruff>=0.8,<1",
  "time-machine>=2.16,<3",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
edgestack = "edgestack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["edgestack"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "external: accesses live external data providers",
  "campaign: runs a potentially long research campaign",
  "integration: crosses multiple EdgeStack subsystems",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures"]
